Add links to landing demo

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             <div class="demo-modal">
               <p>simple landing</p>
               <div class="demo-links">
-                <a><i class="fas fa-external-link-alt"></i></a>
-                <a><i class="fab fa-github"></i></a>
+                <a href="https://e-landing-1.herokuapp.com"><i class="fas fa-external-link-alt"></i></a>
+                <a href="https://github.com/edemskiy/landing-1"><i class="fab fa-github"></i></a>
               </div>
             </div>
           </div>
