--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <div class="demo-modal">
               <p>guess the movie game</p>
               <div class="demo-links">
-                <a href="https://guess-the-movie-react.herokuapp.com/"><i class="fas fa-external-link-alt"></i></a>
-                <a href="https://github.com/edemskiy/guess-the-movie"><i class="fab fa-github"></i></a>
+                <a href="https://guess-the-movie-react.herokuapp.com/" target="_blank"><i class="fas fa-external-link-alt"></i></a>
+                <a href="https://github.com/edemskiy/guess-the-movie" target="_blank"><i class="fab fa-github"></i></a>
               </div>
             </div>
           </div>
@@ -50,8 +50,8 @@
             <div class="demo-modal">
               <p>simple landing</p>
               <div class="demo-links">
-                <a href="https://e-landing-1.herokuapp.com"><i class="fas fa-external-link-alt"></i></a>
-                <a href="https://github.com/edemskiy/landing-1"><i class="fab fa-github"></i></a>
+                <a href="https://e-landing-1.herokuapp.com" target="_blank"><i class="fas fa-external-link-alt"></i></a>
+                <a href="https://github.com/edemskiy/landing-1" target="_blank"><i class="fab fa-github"></i></a>
               </div>
             </div>
           </div>
@@ -61,8 +61,8 @@
             <div class="demo-modal">
               <p>3d-builder on JS</p>
               <div class="demo-links">
-                <a href="https://builder-3d.herokuapp.com/"><i class="fas fa-external-link-alt"></i></a>
-                <a href="https://github.com/edemskiy/builder-3d"><i class="fab fa-github"></i></a>
+                <a href="https://builder-3d.herokuapp.com/" target="_blank"><i class="fas fa-external-link-alt"></i></a>
+                <a href="https://github.com/edemskiy/builder-3d" target="_blank"><i class="fab fa-github"></i></a>
               </div>
             </div>
           </div>
