Change links in social to open in a new tab

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
     <div class="container">
       <h1>Alexander Edemsky</h1>
       <div class="social">
-        <a href="https://teleg.one/edemsky">
+        <a href="https://teleg.one/edemsky" target="_blank">
           <i class="fab fa-telegram"> Telegram</i>
         </a>
-        <a href="https://github.com/edemskiy">
+        <a href="https://github.com/edemskiy" target="_blank">
           <i class="fab fa-github"> GutHub</i>
         </a>
-        <a href="https://www.linkedin.com/in/edemsky/">
+        <a href="https://www.linkedin.com/in/edemsky/" target="_blank">
           <i class="fab fa-linkedin"> LinkedIn</i>
         </a>
-        <a href="pdf/CV_Edemsky.pdf">
+        <a href="pdf/CV_Edemsky.pdf" target="_blank">
           <i class="far fa-file-pdf"> Resume</i>
         </a>
         
