--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
       <h1>Alexander Edemsky</h1>
       <div class="social">
         <a href="https://teleg.one/edemsky" target="_blank">
-          <i class="fab fa-telegram"> Telegram</i>
+          <p><i class="fab fa-telegram"></i>&nbsp;Telegram</p>
         </a>
         <a href="https://github.com/edemskiy" target="_blank">
-          <i class="fab fa-github"> GutHub</i>
+          <p><i class="fab fa-github"></i>&nbsp;GitHub</p>
         </a>
         <a href="https://www.linkedin.com/in/edemsky/" target="_blank">
-          <i class="fab fa-linkedin"> LinkedIn</i>
+          <p><i class="fab fa-linkedin"></i>&nbsp;LinkedIn</p>
         </a>
         <a href="pdf/CV_Edemsky.pdf" target="_blank">
-          <i class="far fa-file-pdf"> Resume</i>
+          <p><i class="far fa-file-pdf"></i>&nbsp;Resume</p>
         </a>
         
       </div>
@@ -37,7 +37,7 @@
           <div class="demo">
             <img src="img/movie.png" />
             <div class="demo-modal">
-              <p>guess the movie game</p>
+              <p>guess the movie</p>
               <div class="demo-links">
                 <a href="https://guess-the-movie-react.herokuapp.com/" target="_blank"><i class="fas fa-external-link-alt"></i></a>
                 <a href="https://github.com/edemskiy/guess-the-movie" target="_blank"><i class="fab fa-github"></i></a>
