--- a/index.html
+++ b/index.html
@@ -34,6 +34,18 @@
     <div class="demos">
         <h2>some demos</h2>
         <div class="portfolio">
+
+          <div class="demo">
+            <img src="img/notes.png" />
+            <div class="demo-modal">
+              <p>not Google notes</p>
+              <div class="demo-links">
+                <a href="https://gg-notes.herokuapp.com/" target="_blank"><i class="fas fa-external-link-alt"></i></a>
+                <a href="https://github.com/edemskiy/notes-app" target="_blank"><i class="fab fa-github"></i></a>
+              </div>
+            </div>
+          </div>
+          
           <div class="demo">
             <img src="img/movie.png" />
             <div class="demo-modal">
