Add movies-db in demos

--- a/index.html
+++ b/index.html
@@ -45,6 +45,17 @@
               </div>
             </div>
           </div>
+
+          <div class="demo">
+            <img src="img/movies-db.png" />
+            <div class="demo-modal">
+              <p>movies database</p>
+              <div class="demo-links">
+                <a href="https://cinema-db.herokuapp.com/" target="_blank"><i class="fas fa-external-link-alt"></i></a>
+                <a href="https://github.com/edemskiy/movies-db" target="_blank"><i class="fab fa-github"></i></a>
+              </div>
+            </div>
+          </div>
           
           <div class="demo">
             <img src="img/movie.png" />
