Add deezer-releases project to demos

--- a/index.html
+++ b/index.html
@@ -27,69 +27,108 @@
         <a href="pdf/CV_Edemsky.pdf" target="_blank">
           <p><i class="far fa-file-pdf"></i>&nbsp;Resume</p>
         </a>
-        
-      </div>
       </div>
     </div>
+
     <div class="demos">
-        <h2>some demos</h2>
-        <div class="portfolio">
-
-          <div class="demo">
-            <img src="img/notes.png" />
-            <div class="demo-modal">
-              <p>not Google notes</p>
-              <div class="demo-links">
-                <a href="https://gg-notes.herokuapp.com/" target="_blank"><i class="fas fa-external-link-alt"></i></a>
-                <a href="https://github.com/edemskiy/notes-app" target="_blank"><i class="fab fa-github"></i></a>
-              </div>
+      <h2>some demos</h2>
+      <div class="portfolio">
+        <div class="demo">
+          <img src="img/notes.png" />
+          <div class="demo-modal">
+            <p>not Google notes</p>
+            <div class="demo-links">
+              <a href="https://gg-notes.herokuapp.com/" target="_blank"
+                ><i class="fas fa-external-link-alt"></i
+              ></a>
+              <a href="https://github.com/edemskiy/notes-app" target="_blank"
+                ><i class="fab fa-github"></i
+              ></a>
             </div>
           </div>
-
-          <div class="demo">
-            <img src="img/movies-db.png" />
-            <div class="demo-modal">
-              <p>movies database</p>
-              <div class="demo-links">
-                <a href="https://cinema-db.herokuapp.com/" target="_blank"><i class="fas fa-external-link-alt"></i></a>
-                <a href="https://github.com/edemskiy/movies-db" target="_blank"><i class="fab fa-github"></i></a>
-              </div>
-            </div>
-          </div>
-          
-          <div class="demo">
-            <img src="img/movie.png" />
-            <div class="demo-modal">
-              <p>guess the movie</p>
-              <div class="demo-links">
-                <a href="https://guess-the-movie-react.herokuapp.com/" target="_blank"><i class="fas fa-external-link-alt"></i></a>
-                <a href="https://github.com/edemskiy/guess-the-movie" target="_blank"><i class="fab fa-github"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="demo">
-            <img src="img/landing.png" />
-            <div class="demo-modal">
-              <p>simple landing</p>
-              <div class="demo-links">
-                <a href="https://e-landing-1.herokuapp.com" target="_blank"><i class="fas fa-external-link-alt"></i></a>
-                <a href="https://github.com/edemskiy/landing-1" target="_blank"><i class="fab fa-github"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="demo">
-            <img src="img/builder.png" />
-            <div class="demo-modal">
-              <p>3d-builder on JS</p>
-              <div class="demo-links">
-                <a href="https://builder-3d.herokuapp.com/" target="_blank"><i class="fas fa-external-link-alt"></i></a>
-                <a href="https://github.com/edemskiy/builder-3d" target="_blank"><i class="fab fa-github"></i></a>
-              </div>
-            </div>
-          </div>
-
         </div>
+
+        <div class="demo">
+          <img src="img/movies-db.png" />
+          <div class="demo-modal">
+            <p>movies database</p>
+            <div class="demo-links">
+              <a href="https://cinema-db.herokuapp.com/" target="_blank"
+                ><i class="fas fa-external-link-alt"></i
+              ></a>
+              <a href="https://github.com/edemskiy/movies-db" target="_blank"
+                ><i class="fab fa-github"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="demo">
+          <img src="img/deezer.png" />
+          <div class="demo-modal">
+            <p>latest releases of my artists on Deezer</p>
+            <div class="demo-links">
+              <a href="https://music-new.herokuapp.com/" target="_blank"
+                ><i class="fas fa-external-link-alt"></i
+              ></a>
+              <a
+                href="https://github.com/edemskiy/deezer-new-releases"
+                target="_blank"
+                ><i class="fab fa-github"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="demo">
+          <img src="img/movie.png" />
+          <div class="demo-modal">
+            <p>guess the movie</p>
+            <div class="demo-links">
+              <a
+                href="https://guess-the-movie-react.herokuapp.com/"
+                target="_blank"
+                ><i class="fas fa-external-link-alt"></i
+              ></a>
+              <a
+                href="https://github.com/edemskiy/guess-the-movie"
+                target="_blank"
+                ><i class="fab fa-github"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="demo">
+          <img src="img/landing.png" />
+          <div class="demo-modal">
+            <p>simple landing</p>
+            <div class="demo-links">
+              <a href="https://e-landing-1.herokuapp.com" target="_blank"
+                ><i class="fas fa-external-link-alt"></i
+              ></a>
+              <a href="https://github.com/edemskiy/landing-1" target="_blank"
+                ><i class="fab fa-github"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="demo">
+          <img src="img/builder.png" />
+          <div class="demo-modal">
+            <p>3d-builder on JS</p>
+            <div class="demo-links">
+              <a href="https://builder-3d.herokuapp.com/" target="_blank"
+                ><i class="fas fa-external-link-alt"></i
+              ></a>
+              <a href="https://github.com/edemskiy/builder-3d" target="_blank"
+                ><i class="fab fa-github"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
