Update movie app

--- a/index.html
+++ b/index.html
@@ -85,14 +85,10 @@
           <div class="demo-modal">
             <p>guess the movie</p>
             <div class="demo-links">
-              <a
-                href="https://guess-the-movie-react.herokuapp.com/"
-                target="_blank"
+              <a href="https://quiz-movie.herokuapp.com/" target="_blank"
                 ><i class="fas fa-external-link-alt"></i
               ></a>
-              <a
-                href="https://github.com/edemskiy/guess-the-movie"
-                target="_blank"
+              <a href="https://github.com/edemskiy/movie-quiz" target="_blank"
                 ><i class="fab fa-github"></i
               ></a>
             </div>
