Update music app links

--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
         <div class="demo">
           <img src="img/deezer.png" />
           <div class="demo-modal">
-            <p>latest releases of my artists on Deezer</p>
+            <p>latest music releases</p>
             <div class="demo-links">
-              <a href="https://music-new.herokuapp.com/" target="_blank"
+              <a href="https://latest-music.herokuapp.com/" target="_blank"
                 ><i class="fas fa-external-link-alt"></i
               ></a>
               <a
-                href="https://github.com/edemskiy/deezer-new-releases"
+                href="https://github.com/edemskiy/latest-music-releases"
                 target="_blank"
                 ><i class="fab fa-github"></i
               ></a>
