--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="css/style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" />
     <title>Alexander Edemsky</title>
   </head>
   <body>
@@ -38,12 +35,8 @@
           <div class="demo-modal">
             <p>not Google notes</p>
             <div class="demo-links">
-              <a href="https://gg-notes.herokuapp.com/" target="_blank"
-                ><i class="fas fa-external-link-alt"></i
-              ></a>
-              <a href="https://github.com/edemskiy/notes-app" target="_blank"
-                ><i class="fab fa-github"></i
-              ></a>
+              <a href="https://gg-notes.herokuapp.com/" target="_blank"><i class="fas fa-external-link-alt"></i></a>
+              <a href="https://github.com/edemskiy/notes-app" target="_blank"><i class="fab fa-github"></i></a>
             </div>
           </div>
         </div>
@@ -53,12 +46,8 @@
           <div class="demo-modal">
             <p>movies database</p>
             <div class="demo-links">
-              <a href="https://cinema-db.herokuapp.com/" target="_blank"
-                ><i class="fas fa-external-link-alt"></i
-              ></a>
-              <a href="https://github.com/edemskiy/movies-db" target="_blank"
-                ><i class="fab fa-github"></i
-              ></a>
+              <a href="https://cinema-db.herokuapp.com/" target="_blank"><i class="fas fa-external-link-alt"></i></a>
+              <a href="https://github.com/edemskiy/movies-db" target="_blank"><i class="fab fa-github"></i></a>
             </div>
           </div>
         </div>
@@ -68,12 +57,8 @@
           <div class="demo-modal">
             <p>latest music releases</p>
             <div class="demo-links">
-              <a href="https://latest-music.herokuapp.com/" target="_blank"
-                ><i class="fas fa-external-link-alt"></i
-              ></a>
-              <a
-                href="https://github.com/edemskiy/latest-music-releases"
-                target="_blank"
+              <a href="https://latest-music.herokuapp.com/" target="_blank"><i class="fas fa-external-link-alt"></i></a>
+              <a href="https://github.com/edemskiy/latest-music-releases" target="_blank"
                 ><i class="fab fa-github"></i
               ></a>
             </div>
@@ -85,12 +70,8 @@
           <div class="demo-modal">
             <p>guess the movie</p>
             <div class="demo-links">
-              <a href="https://quiz-movie.herokuapp.com/" target="_blank"
-                ><i class="fas fa-external-link-alt"></i
-              ></a>
-              <a href="https://github.com/edemskiy/movie-quiz" target="_blank"
-                ><i class="fab fa-github"></i
-              ></a>
+              <a href="https://quiz-movie.herokuapp.com/" target="_blank"><i class="fas fa-external-link-alt"></i></a>
+              <a href="https://github.com/edemskiy/movie-quiz" target="_blank"><i class="fab fa-github"></i></a>
             </div>
           </div>
         </div>
@@ -100,12 +81,8 @@
           <div class="demo-modal">
             <p>simple landing</p>
             <div class="demo-links">
-              <a href="https://e-landing-1.herokuapp.com" target="_blank"
-                ><i class="fas fa-external-link-alt"></i
-              ></a>
-              <a href="https://github.com/edemskiy/landing-1" target="_blank"
-                ><i class="fab fa-github"></i
-              ></a>
+              <a href="https://e-landing-1.herokuapp.com" target="_blank"><i class="fas fa-external-link-alt"></i></a>
+              <a href="https://github.com/edemskiy/landing-1" target="_blank"><i class="fab fa-github"></i></a>
             </div>
           </div>
         </div>
@@ -115,12 +92,8 @@
           <div class="demo-modal">
             <p>3d-builder on JS</p>
             <div class="demo-links">
-              <a href="https://builder-3d.herokuapp.com/" target="_blank"
-                ><i class="fas fa-external-link-alt"></i
-              ></a>
-              <a href="https://github.com/edemskiy/builder-3d" target="_blank"
-                ><i class="fab fa-github"></i
-              ></a>
+              <a href="https://builder-3d.herokuapp.com/" target="_blank"><i class="fas fa-external-link-alt"></i></a>
+              <a href="https://github.com/edemskiy/builder-3d" target="_blank"><i class="fab fa-github"></i></a>
             </div>
           </div>
         </div>
